2006-06-13  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Batch mode fixes.

2006-06-05  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Merged CustomFileChooser from 0.10 branch.

2006-06-03  Gautier Portet <kassoulet gmail com>

	* Makefile: Applied Gentoo fixes (thanks Hanno).

2006-06-01  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Added an error dialog when GStreamer version > 0.8.
	  release 0.8.6 

2006-05-31  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Removed previous fix, and added the possibility to
	  use filesrc instead of gnomevfssrc if it's absent. (#7652) (debian #367253)
	* soundconverter.py: Added an error message when we fail to create a
	  gnomevfssrc element.

2006-05-27  Gautier Portet <kassoulet gmail com>

	* soundconverter: Added Spanish translation.

2006-05-27  Gautier Portet  <kassoulet gmail com>

	* soundconverter: Added a custom file pattern choice.
	  (thanks Adolfo)
	  some cleanup.

2006-05-25  Gautier Portet  <kassoulet gmail com>

	* soundconverter.py: Fix problem with set_sensituve().
	  release 0.8.5

2006-05-10  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix doubled folder (#7403).
	  release 0.8.4

2006-04-22  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fix an uncatched InvalidURIError when adding files.

2006-03-19  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: File permission are copied from source files now.

2006-03-15  Gautier Portet <kassoulet gmail com>

	* Makefile: Applied Makefile cleanup patch from Lars.
	* soundconverter.glade: Removed preferences and exit toolbar buttons
	  as requested (#6777).

2006-01-21  Gautier Portet <kassoulet gmail com>

	Release 0.8.3
	
	Added Error handling when trying to load files with invalid
	characters...
	
	
	Release 0.8.2

	make install-local #1154
	Pause button #1455

	Unique file #5334
	Folder dropping #5561
	Filtering by mime #5789
	Fixed problem with vbr #5872
