@@ -15,6 +15,8 @@ bugs:
  * add support for GNOME encoding profiles ?
 
  * bug: the program's options aren't printed with --help
+ * bug: "use same folder" donesn't work right.
+ 
 
  -ok- find a solution when no tags & filename generated from tags
  -ok- don't add dupplicate files 
