@@ -1,3 +1,7 @@
+2006-07-16  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Batch mode fixes 2.
+
 2006-06-13  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Batch mode fixes.
